# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  11 Mar 2005; Martin Schlemmer <azarah@gentoo.org>:

    Make sure the last test in init.d/modules do not bork the return
    value of the script if not true.

  10 Mar 2005; Mike Frysinger <vapier@gentoo.org>:

    Add udev/selinux support by Chris PeBenito #84337.

  10 Mar 2005; Martin Schlemmer <azarah@gentoo.org>:

    The system() stuff in *depends.awk should be dosystem().

* rc-scripts 1.7.0 (10 Mar 2005)

  09 Mar 2005; Roy Marples <uberlord@gentoo.org>:

    changed from $( cat ${file} ) to $( < ${file ) in net-scripts

    fixed ChangeLog corruption

    rc-daemon.sh now works with the env program

  08 Mar 2005; Roy Marples <uberlord@gentoo.org>:

    rc-services.sh now does a /sbin/depscan.sh -u if we have not got
    our deptree loaded

    removed net_start/stop function from net.lo, bridge and bonding

    net.lo now supports depend() per interface like so
    depend_br0() { need net.eth0 net.eth1 }

  04 Mar 2005; Roy Marples <uberlord@gentoo.org>:

    applied STYLE updates to rc-status
    
    rc-status now uses find correctly for -maxdepth which fixes #84055

  03 Mar 2005; Roy Marples <uberlord@gentoo.org>:

    iwconfig now defaults the transmit key to 1
    bridging and bonding modules now start an interface if it's not
    marked as started

  02 Mar 2005; Roy Marples <uberlord@gentoo.org>:

    net_service() now returns 1 for non net-services
    fixes bug #83352

  02 Mar 2005; Aron Griffis <agriffis@gentoo.org>:

    Add requote() to functions.sh to help rc-daemon.sh

  01 Mar 2005; Martin Schlemmer <azarah@gentoo.org>:

    Fix braindead logic in init.d/checkfs ([[ -z $CDBOOT ]] &&, not -n).

  01 Mar 2005; Roy Marples <uberlord@gentoo.org>

    rc-daemon.sh now provides a working wrapper for start-stop-daemon
    fixes bug #7198

    removed ps calls from net scripts
